# KinectTrackingSlicer

./: CMakeLists.txt  StarbuckCup.ply  StarbuckCup2.vtk
3DHeadData/: slicer4minute.mrml
Head/: Skin.stl  SkinHalf.pcd  SkinRotated.stl
KinectTracking/: CMakeLists.txt  qSlicerKinectTrackingModule.cxx  qSlicerKinectTrackingModule.h  qSlicerKinectTrackingModuleWidget.cxx  qSlicerKinectTrackingModuleWidget.h
KinectTracking/Logic/: CMakeLists.txt  SurfaceRendering.cpp  SurfaceRendering.h  Tracking.cpp  Tracking.h  vtkSlicerKinectTrackingLogic.cxx  vtkSlicerKinectTrackingLogic.h
KinectTracking/MRML/: CMakeLists.txt  vtkIGTLCircularBuffer.h  vtkIGTLToMRMLBase.cxx  vtkIGTLToMRMLBase.h  vtkIGTLToMRMLDepthVideo.cxx  vtkIGTLToMRMLDepthVideo.h  vtkIGTLToMRMLString.cxx  vtkIGTLToMRMLString.h  vtkMRMLIGTLConnectorNode.cxx  vtkMRMLIGTLConnectorNode.h  vtkMRMLIGTLQueryNode.h  vtkMRMLTextNode.h
KinectTracking/Resources/: qSlicerKinectTrackingModule.qrc
KinectTracking/Resources/UI/: qSlicerKinectTrackingFooBarWidget.ui  qSlicerKinectTrackingModuleWidget.ui
KinectTracking/Widgets/: qSlicerKinectTrackingFooBarWidget.cxx  qSlicerKinectTrackingFooBarWidget.h
